# pytomlrs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
package/pytomlrs/: __init__.py
src/: lib.rs  serde_pyobject.rs
tests/: test_pytomlrs.py
