[tool.poetry]
name = "pytomlrs"
version = "0.1.0"
description = ""
authors = [ "YOSHIMURA Yuu <yyu@mental.poker>" ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
wheel = "*"
pytest = "^7.4"
maturin = "==1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
